# dune

./: .clang-format  .clang-tidy  .gitignore  AGENTS.md  CMakeLists.txt  README.md  grammar.js  package-lock.json  package.json  tree-sitter.json
.github/workflows/: ci.yml
editors/zed/: Cargo.toml  extension.toml
editors/zed/icon_themes/: dune-icons.json
editors/zed/languages/dune/: brackets.scm  config.toml  highlights.scm  outline.scm
editors/zed/src/: lib.rs
examples/: linear_regression.dn  matrix_basics.dn  vector_stats.dn
examples/golden/: linear_regression.out  matrix_basics.out
src/: grammar.json  main.cpp  node-types.json  parser.c
src/ast/: ast.hpp  literal_utils.hpp
src/codegen/: assembly_generator.cpp  assembly_generator.hpp  llvm_ir_generator.cpp  llvm_ir_generator.hpp
src/compiler/: bytecode.hpp  compiler.cpp  compiler.hpp
src/lexer/: lexer.cpp  lexer.hpp
src/lsp/: lsp_server.cpp  lsp_server.hpp
src/modules/: module_loader.cpp  module_loader.hpp
src/parser/: parser.cpp  parser.hpp
src/typechecker/: type_checker.cpp  type_checker.hpp
src/vm/: vm.cpp  vm.hpp
stdlib/: array.dn  assert.dn  autograd.dn  collections.dn  csv.dn  dict.dn  display.dn  fs.dn  math.dn  matrix.dn  maybe.dn  option.dn  outcome.dn  process.dn  random.dn  result.dn  runtime.dn  set.dn  text.dn
tests/: compiler_tests.cpp  lexer_tests.cpp  lsp_tests.cpp  parser_tests.cpp  run_cli_case.cmake  run_cli_failure_case.cmake  run_cli_status_case.cmake  run_cli_status_failure_case.cmake  run_native_cli_case.cmake  run_native_failure_case.cmake  type_checker_tests.cpp  vm_tests.cpp
tests/fixtures/: arithmetic.dn  array_api.dn  arrays_modules.dn  choices_case.dn  choices_when.dn  comprehensions.dn  control_flow.dn  dict_set.dn  enums_match.dn  feature_exports.dn  formatted_print.dn  functions.dn  generics_bounds.dn  hello.dn  invalid_escape.dn  many_args.dn  matrix_demo.dn  matrix_shape_error.dn  mutability_aliasing.dn  native_bounds_error.dn  object_model.dn  object_model_api.dn  operators_methods.dn  pattern_matching.dn  record_defaults.dn  records_stdlib.dn  rich_types.dn  standard_types.dn  static_associated_functions.dn  static_types.dn  stdlib_primitives.dn  structs_stdlib.dn  try_operator.dn  type_error.dn
tests/fixtures/errors/: native_bounds_error.dn  type_error.dn
tests/fixtures/golden/: string_escapes.out  vector_stats.out
tests/fixtures/language/: for_in_ranges.dn  membership.dn  numeric_literals.dn  operators_methods.dn  pattern_matching.dn  scopes_assignment_targets.dn  string_escapes.dn
tests/fixtures/stdlib/: autograd_demo.dn  feature_exports.dn  formatted_print.dn  random_demo.dn  stdlib_primitives.dn
tests/fixtures/types/: generics_bounds.dn  type_aliases.dn  type_aliases_run.dn
